fix: how to buy scrollbar/overflow

--- a/index.css
+++ b/index.css
@@ -272,6 +272,7 @@
     text-decoration: none;
     display: block;
     cursor: pointer;
+    overflow: hidden;
   }
 
   .step-item:hover {
